--- a/src/app/raectiveform/raectiveform.component.less
+++ b/src/app/raectiveform/raectiveform.component.less
@@ -23,6 +23,7 @@
 mat-form-field{
   background: #fff;
    height: 77px;
+   border-radius: 5px;
   mat-form-field-flex{
     background: #fff;
   }
