UI misc changes

--- a/src/app/home/home.component.less
+++ b/src/app/home/home.component.less
@@ -136,6 +136,7 @@ mat-card-content.mat-card-content {
   flex-wrap: wrap;
   .product-description {
     font-size: 20px;
+    padding: 0;
     p{
       text-align: justify;
       color: #00a8ff;
