--- a/src/app/pets/pets.component.html
+++ b/src/app/pets/pets.component.html
@@ -2,7 +2,7 @@
   <div class="col-md-12">
     <h1 class="text-center text-primary font-weight-bold">Career at MFK Software </h1>
     <h4 class="text-primary heading-2"><span>We Believe in</span> </h4>
-    <div  @myInsertRemoveTrigger class="col-12 col-md-6">
+    <div  @myInsertRemoveTrigger class="col-12 col-md-6 p-0">
       <ul>
         <li>Passion</li>
         <li>Enthusiasm </li>
@@ -25,7 +25,7 @@
                   Job Overview: Provide a brief, 4-sentence description of the role, what success in the position looks like, and
                   how it fits into the company or organization overall.
                   Responsibilities and Duties:</p>
-                <div class="col-12 col-md-6">
+                <div class="col-12 col-md-6 p-0">
                   <ul>
                     <li>List the essential duties required to carry out this job.</li>
                     <li>List them in order of importance.</li>
@@ -36,7 +36,7 @@
                   </ul>
                 </div>
                 <h4 class="text-primary"><span> Qualifications:</span></h4>
-                <div class="col-12 col-md-6">
+                <div class="col-12 col-md-6 p-0">
                   <ul>
                     <li>Education level.</li>
                     <li>Experience.</li>
@@ -64,7 +64,7 @@
                   Job Overview: Provide a brief, 4-sentence description of the role, what success in the position looks like, and
                   how it fits into the company or organization overall.
                   Responsibilities and Duties:</p>
-                <div class="col-12 col-md-6">
+                <div class="col-12 col-md-6 p-0">
                   <ul>
                     <li>List the essential duties required to carry out this job.</li>
                     <li>List them in order of importance.</li>
@@ -75,7 +75,7 @@
                   </ul>
                 </div>
                 <h4 class="text-primary"><span> Qualifications:</span></h4>
-                <div class="col-12 col-md-6">
+                <div class="col-12 col-md-6 p-0">
                   <ul>
                     <li>Education level.</li>
                     <li>Experience.</li>
