--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,7 +1,7 @@
-<div class="col-12 col-md-8 offset-md-2 col-sm-10 offset-sm-1" @myInsertRemoveTrigger>
+<div class="col-12 col-md-8 offset-md-2 col-sm-10 offset-sm-1 p-0" @myInsertRemoveTrigger>
     
     <mat-card>
-        <div class="contact-form">
+        <div class="contact-form p-0">
                 <mat-card-title><h2>Contact Us </h2></mat-card-title>
             <app-raectiveform></app-raectiveform>
         </div>
