File upload module

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -20,7 +20,7 @@
              <div>
                 <mat-card class="example-card">
                   <div class="col-12 col-md-6">
-                    <h3>The most user friendly ERP application for academic institutions</h3>
+                    <h3 class="application-text">The most user friendly ERP application for academic institutions</h3>
                     <p *ngIf="item.items[0].content.productFullDescription">MFK Software ERP is a robust, easy to use, highly customize and the most secured application for educational institutions. 
                     </p>
                     <div class="col-12">
