--- a/src/app/home/home.component.less
+++ b/src/app/home/home.component.less
@@ -139,7 +139,7 @@ mat-card-content.mat-card-content {
     padding: 0;
     p{
       text-align: justify;
-      color: #00a8ff;
+      color: #0c89ca;
       margin: 10px 0;
     }
   }
@@ -203,6 +203,14 @@ mat-card-content.mat-card-content {
         text-align: center;
         margin: 10px auto;
         display: block;
+      }
+    }
+    .mat-card{
+      .application-text{
+        font-size: 24px;
+      }
+      p{
+        font-size: 20px;
       }
     }
   }
