--- a/src/app/raectiveform/raectiveform.component.html
+++ b/src/app/raectiveform/raectiveform.component.html
@@ -74,9 +74,33 @@
                   <mat-icon matSuffix>question_answer</mat-icon>
               </mat-form-field>
           </div>    
-          <!-- <div class="form-group">
-            <input type="file" formControlName="uploadfile" class="form-control"  id="uploadfile" name="file" (change)="upload($event)"/>
-          </div> -->
+         
+          <div class="form-group">
+            <div class="row">
+              <div class="col-sm-12">
+                  <div id="fileSelector">
+                      <input type="file" formControlName="uploadfile" name="fileUplaod" id="fileUpload"
+                      multiple ng2FileSelect [uploader]="uploader">
+                  </div>
+                  <div>
+                      <div class="row uploadList" *ngFor="let item of uploader.queue">
+                          <div class="col-sm-4">{{item.file.name}}</div>
+                          <div class="col-sm-4">
+                              <div class="progress">
+                                  <div class="progress-bar bg-success" 
+                                  [ngStyle]="{'width':item.progress+'%'}"></div>
+                              </div>
+                          </div>
+                          <div class="col-sm-4">
+                                  <button type="button" class="btn btn-dark  mx-1" (click)="item.upload()">Upload</button>
+                                  <button type="button" class="btn btn-danger  mx-1" (click)="item.remove()">Cancel</button>
+                          </div>
+                      </div>                        
+                  </div>
+              </div>                
+          </div>
+          </div>
+          
           <div class="form-group button-group">
             <button  class="btn btn-primary">submit</button>
           </div>
