--- a/src/app/raectiveform/raectiveform.component.less
+++ b/src/app/raectiveform/raectiveform.component.less
@@ -2,7 +2,7 @@
   max-width: 200px;
   width: 100%;
   margin: 0 auto;
-
+  padding: 10px;
   button {
     width: 100%;
   }
@@ -29,5 +29,10 @@ mat-form-field{
   }
   .mat-form-field-appearance-outline .mat-form-field-outline {
     background: #fff;
+  }
+}
+.uploadList{
+  button{
+    width: 45%;
   }
 }
