--- a/src/app/raectiveform/raectiveform.component.css
+++ b/src/app/raectiveform/raectiveform.component.css
@@ -2,6 +2,7 @@
   max-width: 200px;
   width: 100%;
   margin: 0 auto;
+  padding: 10px;
 }
 .button-group button {
   width: 100%;
@@ -22,4 +23,7 @@ mat-form-field mat-form-field-flex {
 }
 mat-form-field .mat-form-field-appearance-outline .mat-form-field-outline {
   background: #fff;
+}
+.uploadList button {
+  width: 45%;
 }
