--- a/src/styles.css
+++ b/src/styles.css
@@ -1,44 +1,55 @@
 /* You can add global styles to this file, and also import other style files */
 body {
   margin: 0;
-  background: #F2F2F2;
-  font-family: 'Montserrat', sans-serif;
+  background: #fff;
   height: 100vh;
 }
-#container {
-  display: grid;
-  grid-template-columns: 70px auto;
-  height: 100%;
-}
-#container #content {
-  padding: 30px 20px;
-}
-#container #content ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
-#container #content ul li {
+body.mat-app-background {
   background: #fff;
-  border-radius: 8px;
-  padding: 20px 25px;
-  margin-bottom: 8px;
 }
-#container #content ul li a {
+.container #content {
+  padding: 30px 0px;
+}
+.container #content ul li a {
   font-size: 1.5em;
   text-decoration: none;
   font-weight: bold;
   color: #00A8FF;
 }
-#container #content ul li ul {
+.container #content ul li ul {
   margin-top: 20px;
 }
-#container #content ul li ul li {
+.container #content ul li ul li {
   padding: 0;
 }
-#container #content ul li ul li a {
+.container #content ul li ul li a {
   font-size: 1em;
   font-weight: 300;
+}
+.heading-2 {
+  font-size: 24px;
+  color: #000;
+  line-height: 34px;
+  text-transform: none;
+  position: relative;
+  margin: 0 0 30px;
+  font-weight: 500;
+}
+.heading-2:after {
+  position: absolute;
+  content: "";
+  background: #1b56c5;
+  width: 100%;
+  height: 1px;
+  right: 0;
+  top: 35px;
+}
+.heading-2 span {
+  display: inline-block;
+  background: #fff;
+  position: relative;
+  z-index: 1;
+  text-transform: capitalize;
 }
 html,
 body {
@@ -46,5 +57,5 @@ body {
 }
 body {
   margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
+  font-family: 'Lato', sans-serif;
 }
