reomve optimaztion files

--- a/src/app/footer/footer.component.less
+++ b/src/app/footer/footer.component.less
@@ -8,6 +8,7 @@ footer{
         .mz-pagefooter-copyrighttext{
             font-size: 18px;
             font-weight: 500;
+            color: #fff;
         }
         .footer-nav{
             color: #fff;
