--- a/src/app/home/home.component.less
+++ b/src/app/home/home.component.less
@@ -268,12 +268,12 @@ mat-card-content.mat-card-content {
         font-size: 14px;
         text-transform: uppercase;
         font-weight: bold;
-        color: #d24726;
+        color: #00a8ff;;
       }
     }
     i.icon-bgdark {
       color: #f7f7f7;
-      background: #d24625;
+      background: #00a8ff;;
       transition: transform .8s ease-in-out;
       
     }
