--- a/src/app/sidebar/sidebar.component.css
+++ b/src/app/sidebar/sidebar.component.css
@@ -18,7 +18,7 @@ nav .secondpart {
   padding: 0px;
   padding-left: 4px;
   font-weight: 600;
-  color: #ef0fd1;
+  color: #00a8ff;
 }
 nav ul {
   list-style-type: none;
