--- a/src/app/sidebar/sidebar.component.less
+++ b/src/app/sidebar/sidebar.component.less
@@ -15,14 +15,14 @@ img{
 .firstpart{
   font-weight: 700;
   font-size: 26px;
-  color: #00a8ff
+  color: #00a8ff;
 }
 .secondpart{
   font-size: 22px;
   padding: 0px;
   padding-left: 4px;
   font-weight: 600;
-  color: #ef0fd1;
+  color: #00a8ff;
 }
   ul {
     list-style-type: none;
