Enhancement are done

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,12 +1,18 @@
 <footer>
   <div class="container">
-          <div class="row container-links">
-            <div class="col-12">
-              <div class="mz-pagefooter-copyrighttext">
-                Copyright <strong>@</strong> 2019 MFK Software.
-            </div>
-            </div>
-           
-          </div>
+    <div class="row container-links">
+      <div class="col-md-12 col-lg-6 clients">
+        <ul>
+          <li><img src="assets/TD.png" alt=""></li>
+          <li><img src="assets/WIPRO.png" alt=""></li>
+          <li><img src="assets/IBM.png" alt=""></li>
+        </ul>
+      </div>
+      <div class="col-md-12 col-lg-6">
+        <div class="mz-pagefooter-copyrighttext">
+          Copyright <strong>@</strong> 2019 MFK Software.
+        </div>
+      </div>
+    </div>
   </div>
 </footer>
