--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,7 +10,7 @@
                   <p *ngIf="item.items[0].content.productFullDescription">MFK Software ERP is a robust, easy to use, highly customize and the most secured application for educational institutions. 
                   </p>
                   <div class="col-12">
-                  <button  (click)="open(onlinedemoform)" mat-raised-button matTooltip="ERP Demo" aria-label="Button that displays a tooltip when focused or hovered over">ERP Demo</button>
+                  <button  (click)="open(onlinedemoform)" mat-raised-button matTooltip="MFK ERP" aria-label="Button that displays a tooltip when focused or hovered over">MFK ERP</button>
                   </div>
                   
                 </div>
@@ -22,10 +22,6 @@
         </div>
     </div>
   </div>
-
-
-
-
 
   <div class="col-12 demo-section">
       <div class="row items" >
@@ -41,7 +37,7 @@
                         
                       <div class="col-12 product-description">
                           <div class="">
-                              <h4> <strong>ERP Demo</strong> </h4>
+                              <h4> <strong>MFK ERP</strong> </h4>
                               <p>
                                   MFK Software ERP System is the most user friendly ERP application that can help you in taking care of your student data, teacher data, academic data, employee data, payroll, registration, admission, books, fees, mark sheet, report.....
                               </p>
@@ -54,7 +50,7 @@
             </div>
             <div @myInsertRemoveTrigger class="col-12 col-sm-12 col-md-12 col-xl-4 img-row rounded box flyLeft animated bounceInRight">
               
-                <mat-card class="example-card" matTooltip="">  
+                <mat-card class="example-card" matTooltip="Culture Booklet">  
                   <div class="header-title"> 
                       <div class="icon">
                           <i class="ico icon-circled icon-bgdark icon-laptop active icon-3x"></i>
@@ -87,11 +83,11 @@
                         
                       <div class="col-12 product-description">
                           <div class="">
-                              <h4> <strong> Carrier</strong></h4>
+                              <h4> <strong> Career</strong></h4>
                               <p>
-                                  Software established in 1996, MFK Software began as a dream of a few friends who wanted to create a company with a difference –...
+                                MFK Software always encourages aspiring talents to become a part of its team. At MFK Software we value your education, talent, silks & more importantly time. Let’s do some magic together that will inspire the future.
                               </p>
-                              <a class="learnmore" routerLink="/carrier">Learn More</a>
+                              <a class="learnmore" routerLink="/career">Learn More</a>
                             </div>
                       </div>
                         
