--- a/src/app/pets/pets.component.less
+++ b/src/app/pets/pets.component.less
@@ -30,19 +30,21 @@ ul {
 
     &:hover {
       //   background-color: #f14ad4;
-     // cursor: pointer;
+      // cursor: pointer;
       transform: scale(1.01);
       font-weight: 400;
     }
   }
 }
-.webeleive{
-  ul{
+
+.webeleive {
+  ul {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    li{
-      background-color:#fbfbfb;
+
+    li {
+      background-color: #fbfbfb;
       width: 166px;
       margin: 10px;
       text-align: center;
@@ -55,18 +57,30 @@ ul {
     }
   }
 }
+
 .carrire-apply {
   display: flex;
   justify-content: center;
 
   button {
-    width: 30vw;
-    padding: 6px 17px;
+    width: 150px;
+    padding: 6px 6px;
     margin: 5px;
-    background: #000;
+    background: #00a8ff;
     color: #fff;
     font-size: 20px;
   }
+}
+
+.mfk-heading {
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 33px;
+  text-align: justify;
+}
+mat-card{
+    margin-bottom: 20px;
+    background: #e0ebf5;
 }
 
 .example-headers-align .mat-expansion-panel-header-title,
@@ -107,11 +121,13 @@ mat-form-field {
     }
   }
 }
-mat-expansion-panel-header{
+
+mat-expansion-panel-header {
   mat-panel-title {
     color: rgba(35, 127, 210, 0.87);
-  }  
+  }
 }
-.mat-accordion .mat-expansion-panel{
+
+.mat-accordion .mat-expansion-panel {
   margin: 10px 0;
 }
