--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -4,10 +4,8 @@
     <div class="row">
       <div class="description col-12">
         <p>
-            MFK Software ERP System is the most user friendly ERP application that can help you in taking care of your student data, teacher data, academic data, employee data, payroll, registration, admission, books, fees, mark sheet, report, library, attendance, notification, etc. at one place in the most easiest & safest way. It’s a multipurpose platform built with latest technologies that can handle school/colleges to universities management in an efficient way. 
+            MFK Software ERP System is the most user friendly ERP application that can help you in taking care of your student data, teacher data, academic data, employee data, payroll, registration, admission, books, fees, mark sheet, report, library, attendance, notification, etc. at one place in the most easiest & safest way. It’s a multipurpose platform built with latest technologies to handle school/colleges to universities management in an efficient way. 
         </p>
-         
-
           <h4 class="text-primary heading-2"><span> Some high performance modules include</span> </h4>
           <div class="col-xs-12 col-md-6 p-0">
             <ul class="animated fadeInLeft bounceInLeft">
@@ -22,7 +20,7 @@
           
           </div>
           <p>
-              And many more features you will get to know when you explore. 
+              And many more features. 
           </p>
       </div>
         <div class="col-12">
