--- a/src/app/posts/posts.component.less
+++ b/src/app/posts/posts.component.less
@@ -31,9 +31,8 @@
         transform-origin: center center;
 
         &:hover {
-          background-color: #f14ad4;
-          ;
-          cursor: pointer;
+         // background-color: #f14ad4;
+         // cursor: pointer;
           transform: scale(1.04);
         }
       }
