--- a/src/app/raectiveform/raectiveform.component.html
+++ b/src/app/raectiveform/raectiveform.component.html
@@ -75,7 +75,7 @@
               </mat-form-field>
           </div>    
          
-          <div class="form-group">
+          <!-- <div class="form-group">
             <div class="row">
               <div class="col-sm-12">
                   <div id="fileSelector">
@@ -99,7 +99,7 @@
                   </div>
               </div>                
           </div>
-          </div>
+          </div> -->
           
           <div class="form-group button-group">
             <button  class="btn btn-primary">submit</button>
