--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -12,13 +12,13 @@
         <a class="nav-link" routerLink="home" [class.activated]="currentUrl == '/home'" [class.activated]="currentUrl == '/'"> <span>Home</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="onlinedemo" [class.activated]="currentUrl == '/onlinedemo'"><span>ERP Demo</span></a>
+        <a class="nav-link" routerLink="onlinedemo" [class.activated]="currentUrl == '/onlinedemo'"><span>MFK ERP</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="culturebooklet" [class.activated]="currentUrl == '/culturebooklet'"><span>Culter BookLet</span></a>
+        <a class="nav-link" routerLink="culturebooklet" [class.activated]="currentUrl == '/culturebooklet'"><span>Culture Booklet</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="carrier"  [class.activated]="currentUrl == '/carrier'"><span>Carrier</span></a>
+        <a class="nav-link" routerLink="career"  [class.activated]="currentUrl == '/career'"><span>Career</span></a>
       </li>
       <!-- <li class="nav-item">
         <a class="nav-link" routerLink="dashboard" [class.activated]="currentUrl == '/dashboard'"><span>Blog</span></a>
