--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -3,11 +3,11 @@
     <h1 class="text-center font-weight-bold culture-booklet-header">About Culture Booklet</h1>
     <div class="description">
        <p>
-          Culture Booklet is a platform that brings you astonishing stuff about various beautiful and diverse cultures from different corners of the world. Culture Booklet also allows people to share their unique culture by posting pictures or videos and in return it offers <strong class="font-weight-bold">$0.4 USD</strong> per every <strong class="font-weight-bold">1000</strong> views on the particular post. It is platform to explore, share, earn & educate people. In short it’s a place to learn & earn. 
+          Culture Booklet is a platform that brings you a plethora of diverse culture beautiful and diverse cultures from different corners of the world. Culture Booklet also allows people to share their unique culture by posting pictures or videos and in return it offers <strong class="font-weight-bold">$0.4 USD</strong> per every <strong class="font-weight-bold">1000</strong> views on the particular post. It is a platform to explore, share, earn & educate people. In short it’s a place to learn & earn. 
        </p>
         <h4 class="text-primary heading-2"><span>Getting Started</span> </h4>
         <p>
-            You are just few steps away from earning dollars $ $ $ !! 
+            You are just few steps away from earning $$$ dollars!! 
             It is even simpler than it sounds. 
         </p>
         <div class="col-12 col-md-8 p-0">
@@ -27,17 +27,12 @@
             <ul class="animated fadeInLeft bounceInLeft">
                 <li>Content must be related to culture, etiquette, people, language, region, city, state or country. </li>
                 <li>Original content, images or videos are highly recommended. </li>
-                <li>Inappropriate content, picture, video will not be published and the profile will be banned forever on attempting to post them. </li>
+                <li>Inappropriate content, picture, video will not be published and the profile will be banned from attempting to post them. </li>
                 <li>Content encouraging violence, hatred, social difference will not be published. </li> 
             </ul>
         </div>
-        <p>
-            The goal of the theme directory isn’t to host every theme in the world, it’s to host the best open source WordPress themes around. Themes hosted on WordPress.org pass on the same user freedoms as WordPress itself; this means that they are 100% GPL or compatible.
-            Culture Booklet Guidelines 
-            To ensure that Culture Booklet viewers are guaranteed a good experience, every post on the site is reviewed by our review team. Please review the guidelines before uploading your theme.
-            Posts that don’t meet with the review guidelines will not be approved.
-            Your theme will be reviewed using the Theme Unit Test data. Before uploading your theme please review it with this sample export data.
-        </p>
+        <h6>Go To  <a href="https://www.culturebooklet.com/" target="_blank" >Culture Booklet</a></h6>
+     
        
     </div>
 </div>
