--- a/src/app/users/users.component.less
+++ b/src/app/users/users.component.less
@@ -28,10 +28,13 @@
       transform-origin: center center;
 
       &:hover {
-        background-color: #f14ad4;
+      //  background-color: #f14ad4;
         transform: scale(1.01);
         font-weight: 400;
       }
     }
+  }
+  a{
+    cursor: pointer;
   }
 }
