--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,16 +1,16 @@
 footer {
   font-family: Roboto, "Helvetica Neue", sans-serif;
-  background: #20a1ce;
-  height: 75px;
+  background: #f3f3f3;
+  height: auto;
 }
 footer .container-links {
   text-align: center;
-  line-height: 75px;
 }
 footer .container-links .mz-pagefooter-copyrighttext {
   font-size: 18px;
   font-weight: 500;
-  color: #fff;
+  color: #00a8ff;
+  line-height: 85px;
 }
 footer .container-links .footer-nav {
   color: #fff;
@@ -21,7 +21,26 @@ footer .container-links .footer-nav a {
 footer .container-links ul {
   list-style: none;
   padding: 0;
+  margin: 0;
 }
 footer .container-links ul li a {
   color: #fff;
+}
+footer .clients {
+  font-size: 18px;
+  font-weight: 500;
+  color: #00a8ff;
+}
+footer .clients li {
+  display: inline-block;
+  height: 60px;
+  width: 30%;
+  padding: 5px;
+  margin: 16px 0 0 0;
+}
+footer .clients li img {
+  height: 100%;
+  display: block;
+  margin: 0 auto;
+  max-width: 100%;
 }
