--- a/src/app/footer/footer.component.less
+++ b/src/app/footer/footer.component.less
@@ -1,14 +1,14 @@
 footer{
     font-family: Roboto, "Helvetica Neue", sans-serif;
-    background: #20a1ce;
-    height: 75px;
+    background: #f3f3f3;
+    height: auto;
     .container-links{
         text-align: center;
-        line-height: 75px;
         .mz-pagefooter-copyrighttext{
             font-size: 18px;
             font-weight: 500;
-            color: #fff;
+            color: #00a8ff;
+            line-height: 85px;
         }
         .footer-nav{
             color: #fff;
@@ -19,10 +19,29 @@ footer{
         ul{
             list-style: none;
             padding: 0;
+            margin: 0;
             li{
                 a{
                     color: #fff;
                 }
+            }
+        }
+    }
+    .clients{
+            font-size: 18px;
+            font-weight: 500;
+            color: #00a8ff;
+        li {
+            display: inline-block;
+            height: 60px;
+            width: 30%;
+            padding: 5px;
+            margin: 16px 0 0 0;
+            img{
+                height: 100%;
+                display: block;
+                margin: 0 auto;
+                max-width: 100%;
             }
         }
     }
