--- a/src/app/users/users.component.css
+++ b/src/app/users/users.component.css
@@ -26,7 +26,9 @@
   transform-origin: center center;
 }
 .description ul li:hover {
-  background-color: #f14ad4;
   transform: scale(1.01);
   font-weight: 400;
+}
+.description a {
+  cursor: pointer;
 }
