--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -7,23 +7,23 @@
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item" [class.activated]="currentUrl == '/home'">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item"  data-toggle="collapse" data-target=".navbar-collapse.show"  [class.activated]="currentUrl == '/home'">
         <a class="nav-link" routerLink="home" [class.activated]="currentUrl == '/home'" [class.activated]="currentUrl == '/'"> <span>Home</span></a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
         <a class="nav-link" routerLink="onlinedemo" [class.activated]="currentUrl == '/onlinedemo'"><span>MFK ERP</span></a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
         <a class="nav-link" routerLink="culturebooklet" [class.activated]="currentUrl == '/culturebooklet'"><span>Culture Booklet</span></a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
         <a class="nav-link" routerLink="career"  [class.activated]="currentUrl == '/career'"><span>Career</span></a>
       </li>
       <!-- <li class="nav-item">
         <a class="nav-link" routerLink="dashboard" [class.activated]="currentUrl == '/dashboard'"><span>Blog</span></a>
       </li> -->
-      <li class="nav-item">
+      <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
         <a class="nav-link" routerLink="contact" [class.activated]="currentUrl == '/contact'"><span>Contact</span></a>
       </li>
       
